@@ -1,3 +1,5 @@
+2005/10/2 -- released version 20051002_trunk
+
 2005/10/1 -- released version 20051001_trunk
 
 2005/9/30 -- released version 20050930_trunk
